set(TEST tst_BookmarksFolderListModelTests)
add_executable(${TEST} tst_BookmarksFolderListModelTests.cpp)
include_directories(${webbrowser-app_SOURCE_DIR})
qt5_use_modules(${TEST} Core Test)
target_link_libraries(${TEST} webbrowser-app-models)
add_test(${TEST} ${CMAKE_CURRENT_BINARY_DIR}/${TEST} -xunitxml -o ${TEST}.xml)
